# windows-runtime

./: .gitignore  Cargo.toml  README.md
ConsoleTestApp/: ConsoleTestApp.csproj  ConsoleTestApp.sln  Program.cs
ConsoleTestApp/App/: main.js
Source/: Windows.Runtime.sln  Windows.Runtime.vcxproj
Source/NativeScript/: NativeScript.cpp  NativeScript.h  NativeScript.vcxproj  NativeScript.vcxproj.filters  pch.h
Source/NativeScript/Inspector/: utils.cpp  utils.h
Source/NativeScript/Metadata/: Declaration.h  IteratorRange.h  MetadataReader.cpp  MetadataReader.h  NamespaceDeclaration.cpp  (+1 more)
Source/Nativescript.DLL/: Nativescript.DLL.cpp  Nativescript.DLL.h  Nativescript.DLL.vcxproj  Nativescript.DLL.vcxproj.filters  pch.h
Source/TestRunner/: App.xaml  App.xaml.cpp  App.xaml.h  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest  TestRunner.vcxproj  TestRunner.vcxproj.filters
TestApp/: App.xaml.cs  Package.appxmanifest  TestApp.csproj  TestApp.sln
TestApp/App/: main.js
TestApp/TestApp/: Program.cs  TestApp.csproj
core/: Cargo.toml  build.rs
core-bindings/: Cargo.toml  build.rs
core-bindings/src/: bindings.cpp  headers.h  lib.rs
core/bindings/: Cargo.toml  build.rs
core/src/: bindings.cpp  bindings.rs  enums.rs  headers.h  lib.rs  prelude.rs
core/src/bindings/: imeta_data_import2.rs  mod.rs
core/src/metadata/: com_helpers.rs  declaration_factory.rs  declaring_interface_for_method.rs  generic_instance_id_builder.rs  meta_data_reader.rs  mod.rs  signature.rs  token_type.rs
core/src/metadata/declarations/: base_class_declaration.rs  class_declaration.rs  declaration.rs  enum_declaration.rs  event_declaration.rs  field_declaration.rs  interface_declaration.rs  method_declaration.rs  mod.rs  namespace_declaration.rs  parameter_declaration.rs  property_declaration.rs  struct_declaration.rs  struct_field_declaration.rs  type_declaration.rs
core/src/metadata/declarations/delegate_declaration/: generic_delegate_declaration.rs  generic_delegate_instance_declaration.rs  mod.rs
core/src/metadata/declarations/interface_declaration/: generic_interface_declaration.rs  generic_interface_instance_declaration.rs  mod.rs
core/src/runtime/: console.rs  mod.rs
core/src/runtime/com/: com_constructor.rs  com_interop.rs  com_method_call.rs  com_object_wrapper.rs  com_unknown_type.rs  mod.rs
core/src/runtime/ffi/: ff_boolean_type.rs  ffi_interop.rs  ffi_number_type.rs  ffi_void_type.rs  mod.rs
metadata/: Cargo.toml  build.rs
metadata/src/: bindings.cpp  bindings.h  declaration_factory.rs  declaring_interface_for_method.rs  generic_instance_id_builder.rs  lib.rs  meta_data_reader.rs  prelude.rs  signature.rs  value.rs
metadata/src/declarations/: base_class_declaration.rs  class_declaration.rs  declaration.rs  enum_declaration.rs  enum_member_declaration.rs  event_declaration.rs  field_declaration.rs  method_declaration.rs  mod.rs  namespace_declaration.rs  parameter_declaration.rs  property_declaration.rs  struct_declaration.rs  struct_field_declaration.rs  type_declaration.rs
metadata/src/declarations/delegate_declaration/: generic_delegate_declaration.rs  generic_delegate_instance_declaration.rs  mod.rs
metadata/src/declarations/interface_declaration/: generic_interface_declaration.rs  generic_interface_instance_declaration.rs  mod.rs
nativescript/: Cargo.toml
nativescript/src/: lib.rs
playground/: Cargo.toml
playground/src/: interop.rs  main.js  main.rs
runtime/: Cargo.toml
runtime/src/: class.rs  console.rs  converter.rs  error.rs  generic_method_call.rs  helpers.rs  interop.rs  lib.rs  method_call.rs  name_space.rs  property_call.rs  structure.rs  value.rs
runtime/src/globals/: console.rs  mod.rs  performance.rs  time.rs
(+62 files in other folders)
