[package]
name = "nativescript"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["-Cpanic=abort", "-C target-cpu=native"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nativescript"
crate-type = ["dylib"]


[dependencies]
runtime = { path = "../runtime" }