[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
v8 = "0.71.0"
tokio = { version = "1.27.0", features = ["full"] }
chrono = "0.4.24"
metadata = { path = "../metadata" }
parking_lot = "0.12.1"
[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_System",
    "Win32_System_WindowsProgramming",
    "Win32_System_Console",
    "Win32_Foundation"
]